[package]
name = "ryo-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# --- HTTP / server stack ---
axum = "0.7"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1"
http-body-util = "0.1"

# --- Async runtime ---
tokio = { version = "1", features = [
  "rt-multi-thread",
  "net",
  "macros",
  "time",
  "fs",
  "io-util",
  ] }

# --- Routing ---
matchit = "0.8"

# --- Static files ---
mime_guess = "2"
percent-encoding = "2"

# --- Utilities ---
bytes = "1"
futures = "0.3"
once_cell = "1.21.3"
num_cpus = "1"

# --- Errors / logging ---
anyhow = "1"
thiserror = "1"

# --- Allocator (important for tail latency) ---
mimalloc = "0.1.48"