[package]
name = "ryo-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# ---- N-API ----
napi = { version = "3", features = ["async"] }
napi-derive = "3"

# ---- Core server (pure Rust) ----
ryo-core = { path = "../ryo-core" }

# ---- Runtime (single shared runtime) ----
tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1"
num_cpus = "1"

# ---- Used by dispatcher ----
futures = "0.3"
axum = "0.7"

[build-dependencies]
napi-build = "2"
